fix text wrap

--- a/frontend/src/Components/Message/Item/Item.module.scss
+++ b/frontend/src/Components/Message/Item/Item.module.scss
@@ -2,12 +2,11 @@
 
 .message {
     padding: 10px;
-    width: 400px;
+    max-width: 400px;
     margin: 10px;
     font-weight: 600;
     display: flex;
     flex-direction: column;
-    overflow-wrap: anywhere;
     gap: 2px;
 }
 
@@ -27,14 +26,14 @@
 
 .body {
     margin: 0;
+    overflow-wrap: anywhere;
 }
 
 .user {
-    margin: 0;
     font-size: 12px;
     align-self: flex-end;
     font-weight: 600;
-    margin-top: 10px;
+    margin: 10px 0 0;
 }
 
 .date {
